test/ill-formed/0076_flexible_member_in_struct_in_param.c
typedef struct {
  int a;
  int b[];
} s;
void f (s a) {}
